--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/images/main-logo.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
-    <link rel="manifest" href="/manifest.json">
-    <link rel="canonical" href="https://mernpwa.herokuapp.com">
-    <!-- Compiled and minified CSS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="FitnessPwa">
-    <link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
-    <title>Property Finder</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
+		<link rel="shortcut icon" href="%PUBLIC_URL%\images\main-logo.png" />
+
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<meta name="theme-color" content="#000000" />
+		<!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
+		<link rel="manifest" href="/manifest.json" />
+		<link rel="canonical" href="https://mernpwa.herokuapp.com" />
+		<!-- Compiled and minified CSS -->
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-title" content="FitnessPwa" />
+		<link
+			href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css"
+			rel="stylesheet"
+		/>
+		<title>Choose Your Space</title>
+	</head>
+	<body>
+		<noscript> You need to enable JavaScript to run this app. </noscript>
+		<div id="root"></div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	</body>
 </html>
