--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
-		<link rel="shortcut icon" href="%PUBLIC_URL%\images\main-logo.png" />
+		<link rel="shortcut icon" href="%PUBLIC_URL%\images\home-icon.svg" />
 
 		<meta
 			name="viewport"
