--- a/server/landing/verified.html
+++ b/server/landing/verified.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .center {
-        text-align: center;
-        border: 3px solid green;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="center">
-      <h2>Your email has been verified. You can now Login</h2>
-    </div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <style>
+            .center {
+                text-align: center;
+                border: 3px solid green;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="center">
+            <h1>Choose Your Space</h1>
+            <br />
+            <h2>Your email has been verified. You can now Login</h2>
+        </div>
+    </body>
 </html>
